funny-city.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 1907,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.35,
  "homepage_snapshot_redirected_domain": "funny-city.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020528173850id_/http://www.funny-city.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020528173850id_/http%3A//funny-city.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "funny-city.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605040100id_/http%3A//www.funny-city.com/privacy.shtml",
  "policy_title": "Funny-City",
  "policy_url": "funny-city.com/privacy.shtml",
  "sha1": "3af4080d8be1c89c47f064fc9049cd25900377d4",
  "simhash": 17624599261367368816,
  "simhash_updated": false,
  "site_hostname": "funny-city.com",
  "site_url": "http://funny-city.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020605040100",
  "word_count": 310,
  "year": 2002
}

--- a/f/fu/fun/funny-city.com.html
+++ b/f/fu/fun/funny-city.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funny-city.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217105351id_/http%3A//funny-city.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funny-city.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605040100id_/http%3A//www.funny-city.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/all.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -9,60 +9,26 @@
 <meta name="keywords" content="funny pictures,photos,images,cartoons,photographs,videos,parodies,humorous,stupid,insane">
 <meta name="description" content="Find funny pictures, photos, cartoons, videos and jokes.We simply try to make people laugh.">
 <link href="/style.css" rel="stylesheet" type="text/css">
-
-<script>
-flag=1;
-function getCookie(NameOfCookie){
-    if (document.cookie.length > 0) {              
-    begin = document.cookie.indexOf(NameOfCookie+"=");       
-    if (begin != -1) {           
-      begin += NameOfCookie.length+1;       
-      end = document.cookie.indexOf(";", begin);
-      if (end == -1) end = document.cookie.length;
-        return unescape(document.cookie.substring(begin, end));
-    } 
-  }
-  return null;
-}
-
-function setCookie(NameOfCookie, value, expiredays) {
-var ExpireDate = new Date ();
-ExpireDate.setTime(ExpireDate.getTime() + (expiredays * 24 * 3600 * 1000));
-
-  document.cookie = NameOfCookie + "=" + escape(value) + 
-  ((expiredays == null) ? "" : "; expires=" + ExpireDate.toGMTString());
-}
-
-function delCookie (NameOfCookie) {
-  if (getCookie(NameOfCookie)) {
-    document.cookie = NameOfCookie + "=" +
-    "; expires=Thu, 01-Jan-70 00:00:01 GMT";
-  }
-}
-
-function DoTheCookieStuff()
-{
- if (flag== 1) {
-  visited=getCookie('visited');
-  if (visited==null) 
-  {
- setCookie('visited','yes',1)
- MyWindow=window.open('http://www.funny-city.com/subscribe.html','MyWindow','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=450,height=180,left=1,top=1');
-  }
- }
-}
+<!-- FASTCLICK.COM POP-UNDER CODE v1.7e for funny-city.com -->
+<script language="javascript"><!--
+var doc=document;  var url=escape(doc.location.href); var date_ob=new Date();
+doc.cookie='h2=o; path=/;';var bust=date_ob.getSeconds();
+if(doc.cookie.indexOf('e=llo') <= 0 && doc.cookie.indexOf('2=o') > 0){
+doc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
+doc.write('/w/pop.cgi?sid=7275&m=2&v=1.7e&u='+url+'&c='+bust+'"></scr'+'ipt>');
+date_ob.setTime(date_ob.getTime()+43200000);
+doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 </script>
-
-
-
+<!-- FASTCLICK.COM POP-UNDER CODE v1.7e for funny-city.com -->
 </head>
-<body onunload="DoTheCookieStuff()" alink="#000066" background="/back.gif" leftmargin="0" link="#000066" topmargin="0" vlink="#000066" marginheight="0" marginwidth="0">
+<body alink="#000066" background="/back.gif" leftmargin="0" link="#000066" topmargin="0" vlink="#000066" marginheight="0" marginwidth="0">
 <table width="770" border="0" cellpadding="0" cellspacing="0" bgcolor="000066">
   <tbody><tr> 
     <td rowspan="3"><img src="/blankpixel.gif" width="6" height="85"></td>
     <td rowspan="3"><img src="/logo-left.jpg" width="293" height="85"></td>
     <td><img src="/logo-right.jpg" width="30" height="25"></td>
-    <td align="right"><a href="/greek/index.shtml" class="none"></a><a href="/greek" class="none"></a></td>
+    <td align="right"><a href="/greek/index.shtml" class="none"></a><a href="/greek" class="none"></a><a href="Templates/crazy%20real%20and%20fake%20pics"></a><a href="/greek/" class="main">GREEK 
+      EDITION</a></td>
     <td>&nbsp;</td>
   </tr>
   <tr> 
@@ -70,10 +36,24 @@ function DoTheCookieStuff()
   </tr>
   <tr> 
     <td colspan="3"> 
-      
-<script language="JavaScript" src="http://www.funny-city.com/ads/adjs.php"></script>
-	  
-	</td>
+      <!-- FASTCLICK.COM 468x60 v1.4 for funny-city.com -->
+      <script language="Javascript"><!-- 
+var i=j=p=t=u=x=z=dc='';var id=f=0;var f=Math.floor(Math.random()*7777);
+id=7275; dc=document;u='ht'+'tp://media.fastclick.net/w'; x='/get.media?t=n';
+z=' width=468 height=60 border=0 ';t=z+'marginheight=0 marginwidth=';
+i=u+x+'&sid='+id+'&m=1&f=a&v=1.4&c='+f+'&r='+escape(dc.referrer);
+u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
+dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
+if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=7275&amp;m=1&amp;f=a&amp;v=1.4&amp;c=6403&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=7275&m=1&c=6403"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=7275&m=1&f=a&v=1.4&c=6403&r=&d=n" width=468 height=60 border=0 ></a>
+</iframe>
+
+      <noscript> <a href="http://media.fastclick.net/w/click.here?sid=7275&m=1&c=1"  target="_blank"> 
+      <img src="http://media.fastclick.net/w/get.media?sid=7275&m=1&d=s&c=1&f=a&v=1.2"
+width=468 height=60 border=1></a></noscript> 
+      <!-- FASTCLICK.COM 468x60 v1.4 for funny-city.com -->
+    </td>
   </tr>
 </tbody></table>
 <table width="6" border="0" cellpadding="0" cellspacing="0">
@@ -95,10 +75,30 @@ function DoTheCookieStuff()
           </center><center>
             </center><table border="1" cellspacing="1" width="90%" cellpadding="5">
         <tbody><tr align="center"> 
+          <td width="60" bgcolor="#F3F3F3"><b>sponsors</b></td>
           <td width="100%" colspan="2" bgcolor="#F3F3F3"><b><font face="Verdana, Arial, Helvetica, sans-serif">Privacy 
             Policy</font></b></td>
         </tr>
         <tr> 
+            <td rowspan="3" width="60" valign="top">&nbsp; 
+              <!-- FASTCLICK.COM 120x600 v1.4 for funny-city.com -->
+              <script language="Javascript"><!-- 
+var i=j=p=t=u=x=z=dc='';var id=f=0;var f=Math.floor(Math.random()*7777);
+id=7275; dc=document;u='ht'+'tp://media.fastclick.net/w'; x='/get.media?t=n';
+z=' width=120 height=600 border=0 ';t=z+'marginheight=0 marginwidth=';
+i=u+x+'&sid='+id+'&m=3&f=a&v=1.4&c='+f+'&r='+escape(dc.referrer);
+u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=3&c='+f+'"  target="_blank">';
+dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
+if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=7275&amp;m=3&amp;f=a&amp;v=1.4&amp;c=7131&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=7275&m=3&c=7131"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=7275&m=3&f=a&v=1.4&c=7131&r=&d=n" width=120 height=600 border=0 ></a>
+</iframe>
+
+              <noscript> <a href="http://media.fastclick.net/w/click.here?sid=7275&m=3&c=1"  target="_blank"> 
+              <img src="http://media.fastclick.net/w/get.media?sid=7275&m=3&d=s&c=1&f=a&v=1.2"
+width=120 height=600 border=1></a></noscript> 
+              <!-- FASTCLICK.COM 120x600 v1.4 for funny-city.com -->
+            </td>
             <td width="100%" colspan="2"> 
               <p align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="3"><b>Funny-City 
                 promises...</b></font> 
@@ -161,7 +161,6 @@ function DoTheCookieStuff()
       </p>
       <p><br>
       </p>
-      
     </td>
   </tr>
 </tbody></table>
