--- a/c/co/con/condenet.com.html
+++ b/c/co/con/condenet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the condenet.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204204133id_/http%3A//condenet.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the condenet.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605041311id_/http%3A//www.condenet.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>CondéNet and Condé Nast Magazines</title>
@@ -82,75 +82,145 @@
 	
 	<table width="450" cellpadding="0" cellspacing="5" border="0" bgcolor="#ffffff">
 	<tbody><tr>
-	<td>
-	<font size="1" face="verdana,geneva,arial,helvetica" class="regfont">
-This policy was revised on October 10, 2000. Please take a few moments to review it. 
-<br>
-<br>
-            This policy covers all sites produced by CondéNet, including 
-            CondeNet.com, Epicurious.com, Concierge.com, STYLE.com, Glamour.com, 
-            Swoon.com, and all Condé Nast magazine subscription sites. 
-            This policy does not cover information collected on sites linked from 
-            CondéNet sites. <br>
-<br>
-CondéNet sites are committed to bringing you information that's tailored to your individual needs and, at the same time, to protecting your privacy. The following is a summary of the various ways we treat the information you provide us while using our sites.
-<br>
-<br>
-CondéNet only collects personally identifying information with your specific knowledge and consent. For instance, when you register for our services, enter a sweepstakes or contest, complete a survey or subscribe to our magazines, you are asked to provide information such as your email address, name, or phone number. Optional information such as your age or gender may also be requested.
-<br>
-<br>
-CondéNet uses this information to provide you with the service you have requested. For example, if you subscribe to one of our magazines, we will use your email address to send you a confirmation notice and your address to send you your magazine. Similarly, if you enter an online sweepstakes, we will use this information to notify you if you are a winner. We may also use this information to send you regular email newsletters, inform you about new features, products or services, or other changes to the services. 
-<br>
-<br>
-CondéNet does not sell any of our users' personal information. We may, however, share information with carefully selected companies who we think can offer you services and products of interest to you. If you do not wish to have your information shared, write to us at <a href="mailto:privacy@condenast.com" class="link">privacy@condenast.com</a>. If you do not wish to receive communications from us, simply follow the unsubscribe instructions contained within the email. If you've registered for any of our sites, you may also change or update your member preferences or information on your member's page on each site.
-<br>
-<br>
-You may have read about "cookies," nuggets of information that are placed by a Web site in a storage place on your own computer. We use cookies for purposes such as to control the display of ads, to track usage patterns on the site or to record registration and personalization information. For example, if you register you can opt to save your user name and password on your computer. We can provide this convenience by placing a cookie on your computer. 
-<br>
-<br>
-Our cookies do not contain any information that is, in itself, personally identifying.
-<br>
-<br>
-Some of our advertisers occasionally serve you cookies as well. We do not have control over cookies placed by advertisers.
-<br>
-<br>
-If you don't want cookies, your Web browser likely includes an option that allows you not to accept them. We don't recommend using this option, though: It makes browsing our site a less enjoyable experience.
-<br>
-<br>
-We also allow access to our database by third parties that provide us with services, such as technical maintenance or forums software, but only for the purpose of and to the extent necessary to provide you with those services. Any third party who has access to our database for this purpose is bound by the terms set forth in this policy. There may also be occasion when we are legally required to provide access to our database in order to cooperate with police investigations or other legal proceedings. In those instances, the information is provided only for that purpose. 
-<br>
-<br>
-Finally, while your individual information is protected as outlined above, we reserve the right to use aggregated, anonymous data about our users as a group for any business purpose, such as analyzing usage trends and seeking compatible advertisers and partners.
-<br>
-<br>
-KIDS: CondéNet sites are not intended for use by children, especially those under age 13. No one under age 13 is allowed to provide any personal information or use our public discussion areas, forums, and chats. Minors under the age of 18 are prohibited from making purchases, including subscriptions, on our sites.
-<br>
-<br>
-If your kids disclose information about themselves in our public discussion areas, they may get unsolicited messages from other parties. Accordingly, you should tell them not to do so.
-<br>
-<br>
-If you're worried about your kids' activities or their privacy on our sites, we encourage you to email our Privacy Policy Coordinator at <a href="mailto:privacy@condenast.com" class="link">privacy@condenast.com</a>.
-<br>
-<br>
-This Privacy Policy may be modified from time to time; notice of changes will appear on this page, so check back often. Any such changes will be prospective, never retroactive.
-<br>
-<br>
-If you have concerns or questions about any aspect of this policy, please email our Privacy Policy Coordinator at <a href="mailto:privacy@condenast.com" class="link">privacy@condenast.com</a>. We welcome your feedback. You can also send us regular mail at the following address:
-<br>
-<br>
-Privacy Policy Coordinator<br>
-CondéNet Inc.<br>
-1440 Broadway<br>
-            10th Floor<br>
-New York, NY 10018<br>
-USA
-
-
-
-	</font>
-	<br>
-	<br>
-	</td>
+	      <td> 
+            <p><font size="1" face="verdana,geneva,arial,helvetica" class="regfont">Last 
+              revised April 16, 2002.<br>
+              <br>
+              <a href="#kids">Kids and parents click here!</a><br>
+              <br>
+              In addition to reviewing this privacy policy, please read our User 
+              Agreement. Your use of Condenet.com constitutes agreement to its 
+              terms and conditions. <br>
+              <br>
+              Condenet.com is produced by CondeNet, Inc. This policy does not 
+              cover information collected on sites linked to from Condenet.com. 
+              <br>
+              <br>
+              This Privacy Policy may be modified from time to time; the date 
+              of the most recent revisions will appear on this page, so check 
+              back often. Continued access of Condenet.com by you will constitute 
+              your acceptance of any changes or revisions to the Privacy Policy. 
+              <br>
+              <br>
+              It is the goal of Condenet.com to bring you information that is 
+              tailored to your individual needs and, at the same time, protect 
+              your privacy. The following is a summary of the various ways we 
+              treat the information you provide us while using our site. <br>
+              <br>
+              THE TYPE OF INFORMATION Condenet.com COLLECTS <br>
+              <br>
+              Condenet.com generally collects personally identifying information 
+              with your specific knowledge and consent. For instance, when you 
+              enter a sweepstakes or contest, complete a survey, make a purchase, 
+              subscribe to our magazines, subscribe to our newsletters or register 
+              for any portion of our services, you are asked to provide information 
+              such as your e-mail address, name or phone number. Optional information 
+              such as your age or gender may also be requested. <br>
+              <br>
+              HOW Condenet.com USES INFORMATION PROVIDED BY YOU <br>
+              <br>
+              Condenet.com uses this information to provide you with the service 
+              you have requested. If you subscribe to any of our magazines, we 
+              may use your e-mail address to send you a confirmation notice and 
+              your mailing address to send you your magazine. Similarly, if you 
+              enter an online sweepstakes, we will use this information to notify 
+              you if you are a winner. We may also use the information to communicate 
+              with you about new features, products or services, or to improve 
+              the services that we offer by tailoring them to your needs. <br>
+              <br>
+              Condenet.com does not sell any of our users' personal information. 
+              Unless otherwise specified, we may, however, share information with 
+              our affiliates and with carefully selected companies who we think 
+              can offer you services and products of interest to you. If you do 
+              not wish to have your information shared, write to us at [privacy@condenet.com]. 
+              If you do not wish to receive communications from us, simply follow 
+              the unsubscribe instructions contained within the e-mail. <br>
+              <br>
+              We also allow access to our database by third parties that provide 
+              us with services, such as technical maintenance or forums software, 
+              but only for the purpose of and to the extent necessary to provide 
+              those services. And if you choose to purchase items through features 
+              on our site, we may forward your information to third parties for 
+              services such as credit card processing and order fulfillment. There 
+              are also times when you provide information about yourself to us 
+              in areas of the site that are managed or participated in by third 
+              parties, such as our featured merchant partners. In such cases, 
+              the information may be used by us and by such third party(ies), 
+              each pursuant to its own policies. We may also provide your information 
+              to our advertisers, so that they can serve ads to you that meet 
+              your needs or match your interests. While Condenet.com will seek 
+              to require such third parties to follow appropriate privacy policies 
+              and will not authorize them to use this information except for the 
+              express purpose for which it is provided, Condenet.com does not 
+              bear any responsibility for any actions or policies of third parties. 
+              There may also be occasion when we are legally required to provide 
+              access to our database in order to cooperate with police investigations 
+              or other legal proceedings. In those instances, the information 
+              is provided only for that purpose. <br>
+              <br>
+              COOKIES <br>
+              <br>
+              You may have read about "cookies," nuggets of information that are 
+              placed by a Website in a storage place on your own computer. We 
+              use cookies to control the display of ads, to track usage patterns 
+              on the site, to deliver editorial content, and to record registration 
+              and personalization information. For example, if you register on 
+              any part of Condenet.com, you can opt to save your user name and 
+              password on your computer. We can provide this convenience by placing 
+              a cookie on your computer. <br>
+              <br>
+              Our cookies may contain personally identifiable information and 
+              such cookies may be shared with our affiliated companies. <br>
+              <br>
+              Some of our advertisers occasionally serve you cookies as well. 
+              We do not have control over cookies placed by advertisers. <br>
+              <br>
+              If you don't want cookies, your Web browser likely includes an option 
+              that allows you to not accept them. However, if you set your browser 
+              to refuse cookies, some portions of Condenet.com may not function 
+              properly. <br>
+              <br>
+              While your individual information is protected as outlined above, 
+              we reserve the right to use aggregated, anonymous data about our 
+              users as a group for any business purpose, such as analyzing usage 
+              trends and seeking compatible advertisers and partners. <br>
+              <br>
+              IP ADDRESS <br>
+              <br>
+              Your Internet Protocol ("IP") address is usually associated with 
+              the place from which you enter the Internet, like your Internet 
+              Service Provider, your company or your university. We may use your 
+              IP address to help diagnose problems with our server, gather broad 
+              demographic information, and administer our website. <br>
+              <br>
+              <a name="kids">KIDS AND PARENTS</a> <br>
+              <br>
+              Condenet.com is not intended for use by children, especially those 
+              under age 13. No one under age 13 is allowed to provide any personal 
+              information or use our public discussion areas, forums and chats. 
+              Minors between the ages of 13 and 17 must get the permission of 
+              their parent(s) or legal guardian(s) before making purchases, including 
+              subscriptions, on this site. <br>
+              <br>
+              If your children disclose information about themselves in our public 
+              discussion areas, they may get unsolicited messages from other parties. 
+              Accordingly, you should tell them not to do so. <br>
+              <br>
+              If you're worried about your children's activities or their privacy 
+              on our site, we encourage you to e-mail our Privacy Policy Coordinator 
+              at privacy@condenet.com. <br>
+              <br>
+              If you have other concerns or questions about any aspect of this 
+              policy, you may also e-mail our Privacy Policy Coordinator. We welcome 
+              your feedback. You can also send us regular mail at the following 
+              address:</font><font size="1" face="verdana,geneva,arial,helvetica" class="regfont"><br>
+              <br>
+              Privacy Policy Coordinator<br>
+              CondéNet Inc.<br>
+              4 Times Square<br>
+              17th Floor<br>
+              New York, NY 10036 </font> </p>
+            </td>
 	
 	</tr>
 	</tbody></table>
@@ -171,7 +241,7 @@ USA
 <font size="1" face="verdana,geneva,arial,helvetica" color="#ffffff" class="lightfont">
 <br>
 <br>
-Copyright © CondéNet 2001. All rights reserved.
+Copyright © CondéNet 2002. All rights reserved.
 <br>
 Please read our <a href="/privacy.html" class="linklight">privacy policy</a>.<br>
 Use of this site constitutes acceptance of our <a href="/useragreement.html" class="linklight">user agreement</a>.
