--- a/f/fi/fil/filipinaheart.com.html
+++ b/f/fi/fil/filipinaheart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the filipinaheart.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205102349id_/http%3A//www.filipinaheart.com/Privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the filipinaheart.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605043008id_/http%3A//www.filipinaheart.com/Privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>filipinaheart.com - Privacy Policy</title>
@@ -38,6 +38,12 @@ MM_reloadPage(true);
     Profile (eg Height, Weight etc) will be available to other members to preview. 
     Your email address and last name will never be available to other members, 
     only the first name you created for your account. </font></li>
+  <li><font face="Arial, Helvetica, sans-serif">If you elect to add your phone 
+    number and/or address to your profile, then this information will be available 
+    to selected filipinaheart.com members. (This could be all Gold members, or 
+    members meeting your match requirements, depending on your chosen preference). 
+    Please think carefully before adding your address or phone number to your 
+    profile.</font></li>
   <li><font face="Arial, Helvetica, sans-serif">When you communicate with others 
     online, you should be aware that, when disclosing personal information such 
     as your name, e-mail address, etc., on a web page, or in a chat room, that 
@@ -47,8 +53,7 @@ MM_reloadPage(true);
     or other contact information on member profiles. </font></li>
   <li><font face="Arial, Helvetica, sans-serif">We only give member account passwords 
     to the e-mail address that a given member account is registered to. </font></li>
-  <li><font face="Arial, Helvetica, sans-serif">We do not store credit card details, 
-    your phone number or address.</font></li>
+  <li><font face="Arial, Helvetica, sans-serif">We do not store credit card details.</font></li>
 </ul>
 <p><font face="Arial, Helvetica, sans-serif" color="#FF0066"><b>Information we 
   collect from our Website</b> </font></p>
@@ -106,10 +111,11 @@ MM_reloadPage(true);
 <p><font face="Arial, Helvetica, sans-serif"><b><font color="#FF0066">Application 
   of our Privacy Statement</font></b></font></p>
 <p><font face="Arial, Helvetica, sans-serif"> This Privacy Statement was last 
-  reviewed in September 2001. It is subject to change from time to time due to 
-  developments in technology and new laws.</font> </p>
+  reviewed in January 2002. It is subject to change from time to time due to developments 
+  in technology and new laws.</font> </p>
 <p>&nbsp; </p>
-<p>&nbsp; </p>
+<p align="center"><font face="Arial, Helvetica, sans-serif" size="4"><a href="default.htm">Home 
+  </a></font></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
