--- a/e/en/end/endicia.com.html
+++ b/e/en/end/endicia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the endicia.com privacy policy that was archived on 2001-04-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010408182411id_/http%3A//www.endicia.com/endicia-usa/Site/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the endicia.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605043507id_/http%3A//www.endicia.com/endicia-usa/Site/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Endicia Internet Postage - Privacy Statement</title>
@@ -13,7 +13,15 @@
     <tbody><tr>
 	<td rowspan="2" width="5"></td>
 	<td rowspan="2" align="left" valign="top" width="231" height="54"><img src="/endicia-usa/Images/TitleLogo.gif" width="231" height="54" hspace="0" vspace="0" border="0" align="left" valign="top" alt="Endicia Internet Postage"></td>
-	<td class="nav3" align="left" valign="bottom"><a class="nav3" target="_top" href="http://www.endicia.com/">Home</a>&nbsp;&nbsp;|&nbsp; <a class="nav3" target="_top" href="/endicia-usa/Site/postage.cfm">Products</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="nav3" target="_top" href="/endicia-usa/Support/support.cfm">Support</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="nav3" target="_top" href="/endicia-usa/account/login.cfm">Account</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="nav3" target="_top" href="/endicia-usa/Store/index.cfm">Buy&nbsp;Stuff</a></td>
+	<td class="nav3" align="left" valign="bottom">
+	<a class="nav3" target="_top" href="http://www.endicia.com/">Home</a>&nbsp;&nbsp;|&nbsp; 
+	<a class="nav3" target="_top" href="/endicia-usa/Site/postage.cfm">Products</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a class="nav3" target="_top" href="/endicia-usa/Support/support.cfm">Support</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a class="nav3" target="_top" href="/endicia-usa/account/login.cfm">Account</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a class="nav3" target="_top" href="/endicia-usa/Store/indexstore.cfm">Buy&nbsp;Stuff</a>
+
+	  
+	 </td>
     </tr>
     <tr><td height="3" valign="bottom"><img src="/endicia-usa/Images/Orange.gif" width="1" height="1"></td></tr>
   </tbody></table>
@@ -23,8 +31,10 @@
 <table align="center" cellspacing="10" cellpadding="0">
   <tbody><tr>
     <td valign="top" width="730">
-<p align="center"></p><h2>Privacy Statement</h2><p></p>
-<strong>About us</strong>
+	<p align="justify">
+      </p><h1>Privacy Statement</h1>
+
+<b>About us</b>
 <br>
 Your privacy is extremely important to us, we are committed to protecting your privacy rights. We do not disclose your personal to any third party.
 
@@ -37,8 +47,10 @@ Your privacy is extremely important to us, we are committed to protecting your p
 	</li><li><a href="privacy.cfm#security">Security Practices For Information Collected</a>
 	</li><li><a href="privacy.cfm#access">Your Access To Information Collected</a>
 	</li></ul>
+
+<br>
 <a name="visit"></a>
-<strong>Information Collected When You Visit Our Web Site</strong>
+<b>Information Collected When You Visit Our Web Site</b>
 <br>
 If you do nothing during your visit but browse through the Web site, read pages, or download information, we will  gather and store certain information about your visit automatically. This information does not identify you personally. We automatically collect and store only the following information about your visit:
 <p>
@@ -52,36 +64,36 @@ If you do nothing during your visit but browse through the Web site, read pages,
 <p></p>
 We use this information to help us make our site more useful to visitors - to learn about the number of visitors to the different sections of our site, what information is of most and least interest, and technical information that will enhance ease of use, such as, the types of technology our visitors use and system performance or problem areas. We do not track or record information about individuals and their visits.
 <p></p>
-<strong>We do not use "cookies".</strong> 
+We do not use "cookies".
 <p></p>
 If you have any inquiry about our privacy policy, please email us at <a href="mailto:support@endicia.com">support@endicia.com</a>. Written inquiries may be made to: endicia, inc., IBIP Privacy, 247 High Street, Palo Alto, CA 94310-1041. We can also be reached via phone at 650.321.2640
 <a name="email"></a>
 <p></p>
-<strong>Information Collected From E-mails</strong>
+<b>Information Collected From E-mails</b>
 <br>
 The Endicia Web site allows you to send us an e-mail. If your e-mail message includes personally-identifying information, we will use that information to respond to your inquiry. We will preserve the content of your e-mail and email address, and our response so that we can more efficiently handle any follow-up questions.
 <p></p>
 Remember that e-mail is not necessarily secure against interception. If your communication is very sensitive, or includes information such as your bank account, charge card, or social security number, do not use email.
 <a name="register"></a>
 <p></p>
-<strong>Information Collected During The Registration Process</strong>
+<b>Information Collected During The Registration Process</b>
 <br>
 To use our Dazzle product, you must register via our web-enabled on-line registration form.  The United States Postal Service must approve your registration. During the registration process, certain information is collected which includes your name, physical address, mailing address, telephone number, and credit card information including number, type, expiration date and billing address. In addition,  other information about your anticipated mail usage is also collected. This includes estimated annual postage and annual percentage of mail by type, type of usage (customer, postal, or government), permit authorization, third party mailing, other meter licenses, revoked meter licenses and post office where mail is entered. This information is securely electronically transmitted to the United States Postal Service to complete the registration process. This information is primarily used to register you as a Dazzle user and for future account management activities associated with your normal day to day activities.
 <a name="using"></a>
 <p></p>
-<strong>Information Collected While Using Internet Postage</strong>
+<b>Information Collected While Using Internet Postage</b>
 <br>
 When you purchase postage Using Internet Postage, the only additional information collected by us, is the amount and date of your postage purchase. Everytime you purchase postage a validation is performed with the credit card information collected during the registration process ensuring that unathorized parties do not have access to your information. 
 <p></p>
 When you use Internet Postage, we verify your destination addresses against the Postal Service's Address Matching System (AMS). We collect the date, destination ZIP code, and rate category of each indicium created. The primary purpose of this information is for accounting and reporting purposes.
 <a name="security"></a>
 <p></p>
-<strong>Security Practices For Information Collected</strong>
+<b>Security Practices For Information Collected</b>
 <br>
 We will safeguard, according to strict standards of security and confidentiality, any information you share with us. To ensure that your personal information remains confidential, the information is sent via a "secure session" established by Secure Sockets Layer (SSL) or equivalent technology. These technologies encrypt - or scramble - your personal information to guard against unauthorized access. 
 <a name="access"></a>
 <p></p>
-<strong>Your Access To Information Collected</strong>
+<b>Your Access To Information Collected</b>
 <br>
 We make every effort to ensure the data we collect is accurate, complete and timely. If you believe our data pertaining to you requires correction, you have been given access to your information via our online account management web site.
 	
@@ -90,7 +102,7 @@ We make every effort to ensure the data we collect is accurate, complete and tim
 		</p><center>
 		<a href="/endicia-usa/Site/company.cfm">Company Info</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="mailto:sales@endicia.com">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	  1-800-576-3279 x140&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/endicia-usa/Site/privacy.cfm">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/endicia-usa/Site/ibiguidelines.cfm">USPS Guidelines</a>
-	  <br>Copyright © 2000-2001,
+	  <br>Copyright © 2000-2002,
 	  Envelope Manager Software.&nbsp;&nbsp;<a href="/endicia-usa/Site/legal.cfm">All rights reserved</a>.</center>
 	<p></p>
     </td>
