--- a/e/ed/edi/edison.edu.html
+++ b/e/ed/edi/edison.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the edison.edu privacy policy that was archived on 2001-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011222142612id_/http%3A//edison.edu/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the edison.edu privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605055932id_/http%3A//www.edison.edu/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Internet Privacy Policy</title>
