--- a/e/e-/e-m/e-myth.com.html
+++ b/e/e-/e-m/e-myth.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the e-myth.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204205245id_/http%3A//www.e-myth.com/corporate/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the e-myth.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605060802id_/http%3A//www.e-myth.com/corporate/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>E-Myth Worldwide - About Us: e-myth.com Privacy Policy</title>
@@ -193,7 +193,7 @@ you can apply the principles of E-Myth development to your business?
 Start now with a copy of <a href="http://www.e-myth.com/Merchant2/merchant.mv?Screen=PROD&amp;Store_Code=EMW&amp;Product_Code=EMREV-BK-S&amp;Category_Code=BK">The E-Myth Revisited</a>,
 <strong>the book voted #1 business book by <em>Inc. 500</em> CEOs!</strong>.
 <br><br>
-<a href="http://www.e-myth.com/Merchant2/merchant.mv?Screen=PROD&amp;Store_Code=EMW&amp;Product_Code=EMREV-BK-S&amp;Category_Code=BK">Click here to get your copy of The E-Myth Revisited, now just $10 through November 30th!</a><br><br>
+<a href="http://www.e-myth.com/Merchant2/merchant.mv?Screen=PROD&amp;Store_Code=EMW&amp;Product_Code=EMREV-BK-S&amp;Category_Code=BK">Click here to get your copy of The E-Myth Revisited now!</a><br><br>
 </div>
 	
 	</td>
@@ -216,7 +216,7 @@ Start now with a copy of <a href="http://www.e-myth.com/Merchant2/merchant.mv?Sc
 </tr>
 <tr>
 	<td>
-	<div class="copyright">All contents of this webpage are copyright 1998-2001, E-Myth Worldwide. All Rights Reserved.</div>
+	<div class="copyright">All contents of this webpage are copyright 1998-2002, E-Myth Worldwide. All Rights Reserved.</div>
 	</td>
 </tr>
 </tbody></table>
@@ -280,7 +280,7 @@ function wtl_Tag5_89186()
 
 wtl_Tag5_89186();
 //-->
-</script><img id="WTL_TAG" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S005-01-7-13-262137-89186/button5.asp?tagver=5&amp;si=89186&amp;fw=0&amp;server=&amp;Group=&amp;tz=0&amp;ch=1&amp;cl=K211mu7&amp;ti=E-Myth%20Worldwide%20-%20About%20Us%3A%20e-myth.com%20Privacy%20Policy&amp;url=https%3A//web.archive.org/web/20011204205245id_/http%253A//www.e-myth.com/corporate/privacy.htm&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
+</script><img id="WTL_TAG" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S005-01-7-13-262137-89186/button5.asp?tagver=5&amp;si=89186&amp;fw=0&amp;server=&amp;Group=&amp;tz=0&amp;ch=1&amp;cl=K211mw7&amp;ti=E-Myth%20Worldwide%20-%20About%20Us%3A%20e-myth.com%20Privacy%20Policy&amp;url=https%3A//web.archive.org/web/20020605060802id_/http%253A//www.e-myth.com/corporate/privacy.htm&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
 <noscript>
 <IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S005-01-7-13-262137-89186/button5.asp?tagver=5&si=89186&fw=0&js=No&">
 </noscript>
