--- a/m/ma/mas/massrmv.com.html
+++ b/m/ma/mas/massrmv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the massrmv.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216213152id_/http%3A//www.state.ma.us/rmv/legal/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the massrmv.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605063958id_/http%3A//www.state.ma.us/RMV/legal/index.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="description" content="Vanity plate information and order requirements">
@@ -9,8 +9,53 @@
 <link rel="stylesheet" href="../rmvnews/styles/main.css" type="text/css">
 </head>
 
-<body topmargin="0" leftmargin="0" bgcolor="#FFFFFF">
-<div align="left">
+<body topmargin="0" leftmargin="0" bgcolor="#FFFFFF" marginwidth="0" marginheight="0">
+<!--     Begin Mass.Gov header -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+  <tbody><tr bgcolor="#91A8CE">
+    <td align="left" bgcolor="#91A8CE"> 
+      <table bgcolor="#91A8CE" border="0" cellpadding="0" cellspacing="0" width="760" height="32">
+        <tbody><tr>
+          <form action="http://www.mass.gov/portal/index.jsp?pageID=search" method="post"></form>
+            <td width="631" valign="bottom" bgcolor="#91A8CE"><img src="http://www.state.ma.us/header/top.gif" width="631" height="32" alt="Mass.gov" usemap="#Massgov" border="0"></td>
+            <td width="129" valign="top"><img src="http://www.state.ma.us/header/spacer.gif" height="2" width="80" alt=""><br>
+              &nbsp;
+              <input type="text" name="q" size="8" maxlength="800">
+              &nbsp;&nbsp;
+              <input type="image" name="search" border="0" src="http://www.state.ma.us/header/search.gif" height="13" width="16" alt="Perform Search">
+              <input value="0" name="stq" type="hidden">
+            </td>
+          
+        </tr>
+      </tbody></table>
+    </td>
+  </tr>
+</tbody></table>
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+  <tbody><tr>
+    <td> 
+      <table border="0" cellspacing="0" cellpadding="0" width="100%">
+        <tbody><tr> 
+          <td height="3" width="100%" align="left"><img src="http://www.state.ma.us/header/bar_top.gif" height="3" width="760" alt=""></td>
+        </tr>
+        <tr bgcolor="#004386"> 
+          <td bgcolor="#004386" height="16" width="100%" align="left"><img src="http://www.state.ma.us/header/bar.gif" height="16" width="119" alt=""></td>
+        </tr>
+        <tr> 
+          <td height="3" width="100%" align="left"><img src="http://www.state.ma.us/header/spacer.gif" height="3" width="1" alt=""></td>
+        </tr>
+      </tbody></table>
+    </td>
+  </tr>
+</tbody></table>
+<map name="Massgov">
+  <area alt="Mass.Gov home" coords="0,0,169,32" href="http://www.mass.gov/" title="Mass.gov home" shape="RECT">
+  <area alt="Mass.gov  home" coords="171,0,257,32" href="http://www.mass.gov/portal/index.jsp" title="Mass.gov  home" shape="RECT">
+  <area alt="get things done" coords="260,0,343,32" href="http://www.mass.gov/portal/index.jsp?pageID=getthingsdone&amp;u=getthingsdone" title="get things done" shape="RECT">
+  <area alt="agencies" coords="346,0,433,32" href="http://www.mass.gov/portal/index.jsp?pageID=agencies&amp;u=agencies" title="state agencies" shape="RECT">
+  <area alt="Search Mass.Gov" coords="524,0,631,32" title="Search Mass.Gov">
+</map>
+<!-- End Mass.Gov header -->
 
 <!-- #BeginLibraryItem "/Library/Header.lbi" -->
 <div align="left">
@@ -116,7 +161,7 @@
     </tr>
   </tbody></table>
 </div>
-<!-- #EndLibraryItem --></div>
+<!-- #EndLibraryItem -->
 <div align="left">
 
   <table width="600" border="0" cellspacing="0" cellpadding="4">
