--- a/h/he/hel/helpwanted.com.html
+++ b/h/he/hel/helpwanted.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the helpwanted.com privacy policy that was archived on 2001-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011215055334id_/http%3A//helpwanted.com/Privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the helpwanted.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605074414id_/http%3A//www.helpwanted.com/Privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>HelpWanted.com</title>
