dofactory.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3618,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.31,
  "homepage_snapshot_redirected_domain": "dofactory.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020329162504id_/http://dofactory.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020329162504id_/http%3A//dofactory.com",
  "interval": "2002_A",
  "link_text": "privacy statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "dofactory.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605075857id_/http%3A//dofactory.com/terms/privacy.asp",
  "policy_title": "Data & Object Factory privacy statement",
  "policy_url": "dofactory.com/terms/privacy.asp",
  "sha1": "ef42eb9faa4117a88c9dbd121b1b83376656311e",
  "simhash": 6343502448716107610,
  "simhash_updated": false,
  "site_hostname": "dofactory.com",
  "site_url": "http://dofactory.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020605075857",
  "word_count": 457,
  "year": 2002
}

--- a/d/do/dof/dofactory.com.html
+++ b/d/do/dof/dofactory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dofactory.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214034555id_/http%3A//dofactory.com/terms/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dofactory.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605075857id_/http%3A//dofactory.com/terms/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -29,7 +29,7 @@
       <td><table width="100%" cellpadding="0" cellspacing="0" border="0">
             <tbody><tr>
               <td width="180"><img src="/images/pixel.gif" width="180" height="29" border="0" alt=""></td>
-              <td align="left" width="300" valign="top"><font size="1" color="#DDDDDD" face="arial,helvetica"><b>&nbsp;DEVELOPER TRAINING&nbsp;</b></font></td>
+              <td align="left" valign="top"><font size="1" color="#DDDDDD" face="arial,helvetica"><b>&nbsp;DEVELOPER TRAINING&nbsp;</b></font></td>
             </tr>
           </tbody></table></td>
      </tr> 
@@ -172,6 +172,9 @@
   </tr>
 </tbody></table>
 
+
+
+
 <br>
 
 
@@ -208,7 +211,6 @@
   </td>
  </tr>
 </tbody></table>  
-
 
 
 
@@ -395,7 +397,7 @@ you to periodically review this Statement so as to be aware of any changes.
     <tbody><tr>
      <td>
       <font size="1" color="GRAY" face="arial,helvetica">
-      Copyright © 2000 - 2001 Data &amp; Object Factory. All rights reserved. data &amp; object factory™, dofactory.com™, and the 'slanting do' logo are trademarks of Data &amp; Object Factory.
+      Copyright © 2000 - 2002 Data &amp; Object Factory. All rights reserved. data &amp; object factory™, dofactory.com™, and the 'slanting do' logo are trademarks of Data &amp; Object Factory.
       </font>
       <br><br> 
      </td>
