gastongazette.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4991,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.0,
  "homepage_snapshot_redirected_domain": "gastongazette.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328040250id_/http://www.gastongazette.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328040250id_/http%3A//gastongazette.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gastongazette.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605080048id_/http%3A//www.gastongazette.com/portal/Miscfiles/privacystatement.htm",
  "policy_title": "Privacy Statement",
  "policy_url": "gastongazette.com/portal/Miscfiles/privacystatement.htm",
  "sha1": "1e063cae39e6f47fc4110602a7bd00edd9af29fa",
  "simhash": 14324971534739274617,
  "simhash_updated": false,
  "site_hostname": "gastongazette.com",
  "site_url": "http://gastongazette.com",
  "smog": 14.22,
  "strict_updated": false,
  "timestamp": "20020605080048",
  "word_count": 794,
  "year": 2002
}

--- a/g/ga/gas/gastongazette.com.html
+++ b/g/ga/gas/gastongazette.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gastongazette.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217162339id_/http%3A//www.gastongazette.com/portal/Miscfiles/privacystatement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gastongazette.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605080048id_/http%3A//www.gastongazette.com/portal/Miscfiles/privacystatement.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement</title>
@@ -39,16 +39,26 @@
     <tbody><tr>
       <td width="100%">
 <p align="center">
-<font color="#0000A0" size="1" face="Arial"><a href="http://www.gastongazette.com/Default.htm">Home</a>
-| <a href="http://www.gastongazette.com/portal/News/news-gaston.htm">News</a>
-| <a href="http://www.gastongazette.com/portal/Sports/sports.htm">Sports</a>
-| <a href="http://www.gastongazette.com/portal/Business/business.htm">Business</a>
-| <a href="http://www.gastongazette.com/portal/Entertainment/entertainment.htm">Entertainment</a>
-| <a href="http://www.gastongazette.com/portal/Community/community.htm">Community</a>
-| <a href="http://www.gastongazette.com/portal/Lifestyles/lifestyles.htm">Lifestyle</a>
-| <a href="http://www.smartfindershops.com/">Shopping</a>
-| <a href="http://www.gastongazette.com/Portal/homeplace/homemagazine.html">Real Estate</a>
-| <a href="http://www.gastongazette.com/portal/Community/classifieds.htm">Classified</a></font></p>
+<font size="1" face="Arial">
+<a href="http://www.gastongazette.com/Default.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Home</a> |
+<a href="http://www.gastongazette.com/portal/News/news-gaston.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+News</a> |
+<a href="http://www.gastongazette.com/portal/Sports/sports.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Sports</a> |
+<a href="http://www.gastongazette.com/portal/Business/business.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Business</a> |
+<a href="http://www.gastongazette.com/portal/Entertainment/entertainment.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Entertainment</a> |
+<a href="http://www.gastongazette.com/portal/Community/community.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Community</a> |
+<a href="http://www.gastongazette.com/portal/Lifestyles/lifestyles.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Lifestyles</a> |
+<a href="http://www.smartfindershops.com/" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Shopping</a> |
+<a href="http://www.gastongazette.com/Portal/homeplace/homemagazine.html" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Real Estate</a> |
+<a target="_blank" href="http://freedomnc.townnews.com/gastonia/">Classifieds</a></font></p>
 
       </td>
     </tr>
@@ -59,7 +69,7 @@
   </tbody></table>
   </center>
 </div>
-<!--webbot bot="Include" endspan i-checksum="36912" -->
+<!--webbot bot="Include" endspan i-checksum="65036" -->
 
         <span style="mso-spacerun: yes"><b><font face="Arial" size="4" color="#0000ff">
         <p align="CENTER">Freedom Interactive Media<br>
@@ -164,18 +174,26 @@
 </font>
 
 <p align="center">
-<font size="1" face="Arial"><font color="#0000A0"> <a href="http://www.gastongazette.com/Default.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Home</a>
-| <a href="http://www.gastongazette.com/portal/News/news-gaston.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">News</a>
-| <a href="http://www.gastongazette.com/portal/Sports/sports.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Sports</a>
-| <a href="http://www.gastongazette.com/portal/Business/business.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Business</a>
-| <a href="http://www.gastongazette.com/portal/Entertainment/entertainment.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Entertainment</a>
-| <a href="http://www.gastongazette.com/portal/Community/community.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Community</a>
-| <a href="http://www.gastongazette.com/portal/Lifestyles/lifestyles.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Lifestyles</a>
-| <a href="http://www.smartfindershops.com/" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Shopping</a>
-| <a href="http://www.gastongazette.com/Portal/homeplace/homemagazine.html" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Real
-Estate</a> | <a href="http://www.zip2.com/smartfinder" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Yellow
-Pages</a> | <a href="http://www.gastongazette.com/portal/Community/classifieds.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">Classifieds</a>
-</font></font></p>
+<font size="1" face="Arial">
+<a href="http://www.gastongazette.com/Default.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Home</a> |
+<a href="http://www.gastongazette.com/portal/News/news-gaston.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+News</a> |
+<a href="http://www.gastongazette.com/portal/Sports/sports.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Sports</a> |
+<a href="http://www.gastongazette.com/portal/Business/business.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Business</a> |
+<a href="http://www.gastongazette.com/portal/Entertainment/entertainment.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Entertainment</a> |
+<a href="http://www.gastongazette.com/portal/Community/community.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Community</a> |
+<a href="http://www.gastongazette.com/portal/Lifestyles/lifestyles.htm" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Lifestyles</a> |
+<a href="http://www.smartfindershops.com/" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Shopping</a> |
+<a href="http://www.gastongazette.com/Portal/homeplace/homemagazine.html" onmouseover="this.className='textRed'" onmouseout="this.className='textGreen'">
+Real Estate</a> |
+<a target="_blank" href="http://freedomnc.townnews.com/gastonia/">Classifieds</a></font></p>
 
 <div align="center">
   <center>
@@ -209,7 +227,7 @@ Pages</a> | <a href="http://www.gastongazette.com/portal/Community/classifieds.h
   </center>
 </div>
 <p align="center">&nbsp;</p>
-<!--webbot bot="Include" endspan i-checksum="40117" -->
+<!--webbot bot="Include" endspan i-checksum="64806" -->
 <p>&nbsp;</p>
       </span></td>
     </tr>
