insurancejournal.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4286,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.67,
  "homepage_snapshot_redirected_domain": "insurancejournal.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020524145451id_/http://insurancejournal.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020524145451id_/http%3A//insurancejournal.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "insurancejournal.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605081415id_/http%3A//insurancejournal.com/html/ijweb/main/privacy-po.htm",
  "policy_title": "InsuranceJournal.com",
  "policy_url": "insurancejournal.com/html/ijweb/main/privacy-po.htm",
  "sha1": "4523c43b9b2a1619fd326e7584acc259889a324d",
  "simhash": 7752871229829317112,
  "simhash_updated": false,
  "site_hostname": "insurancejournal.com",
  "site_url": "http://insurancejournal.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020605081415",
  "word_count": 661,
  "year": 2002
}

--- a/i/in/ins/insurancejournal.com.html
+++ b/i/in/ins/insurancejournal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the insurancejournal.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216204352id_/http%3A//www.insurancejournal.com/html/ijweb/main/privacy-po.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the insurancejournal.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605081415id_/http%3A//insurancejournal.com/html/ijweb/main/privacy-po.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>InsuranceJournal.com</title>
