discountcell.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 2485,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.18,
  "homepage_snapshot_redirected_domain": "discountcell.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020329161253id_/http://discountcell.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020329161253id_/http%3A//discountcell.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "discountcell.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605082939id_/http%3A//discountcell.com/privacy.htm",
  "policy_title": "Privacy Policy",
  "policy_url": "discountcell.com/privacy.htm",
  "sha1": "9be19e9b0e2ee5495f213fac797ce2d4d1172103",
  "simhash": 11272214663217515301,
  "simhash_updated": true,
  "site_hostname": "discountcell.com",
  "site_url": "http://discountcell.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020605082939",
  "word_count": 393,
  "year": 2002
}

--- a/d/di/dis/discountcell.com.html
+++ b/d/di/dis/discountcell.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the discountcell.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201050533id_/http%3A//discountcell.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the discountcell.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605082939id_/http%3A//discountcell.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="description" content="DiscountCell Privacy Policy">
@@ -18,22 +18,26 @@
   <tbody><tr>
     <td width="25%" bgcolor="#000080"><div align="center"><table border="0" cellspacing="0" width="85%">
       <tbody><tr>
-        <td width="100%" bgcolor="#FFFFFF" align="center"><p align="left"><img border="0" src="images/dc5.jpg" width="198" height="38"></p></td>
+        <td width="100%" bgcolor="#FFFFFF" align="center"><p align="left">
+        <img border="0" src="images/dc5.jpg" width="198" height="38"></p></td>
       </tr>
     </tbody></table>
       </div><p align="center"><font face="Arial" size="1" color="#FFFFFF"><strong>1-800-422-1814
-    </strong>(M-F 7am to 5pm mst)<br>
+    </strong>(M-F 7am to 5pm MST)<br>
     International or Local - 801-235-9809</font></p></td>
     <td width="75%" bgcolor="#000080"><div align="center"><table border="0" cellpadding="3" cellspacing="0" width="100%">
       <tbody><tr>
         <td width="50%" align="left"><a href="http://www.discountcell.com/Default.htm"><font face="Arial" size="1" color="#FFFFFF">Home</font></a><font color="#FFFFFF" face="Arial"><small> | </small></font><a href="http://www.discountcell.com/ordeinfo.htm"><font face="Arial" size="1" color="#FFFFFF">Ordering</font></a><font color="#FFFFFF" face="Arial"><small> | </small></font><a href="http://www.discountcell.com/privacy.htm"><font face="Arial" size="1" color="#FFFFFF">Privacy Policy</font></a> <font color="#FFFFFF">|
-          <a href="http://www.discountcell.com/legal.htm"><font face="Arial" size="1" color="#FFFFFF">Terms</font></a></font></td>
-        <td width="25%" align="center"><p align="center"><a href="http://www.discountcell.com/order.asp"><b><font color="#FFFFFF" size="3">View
-        Cart/Checkout</font></b></a></p></td>
-        <td width="25%" align="center"><p align="center"><a href="http://www.discountcell.com/search.asp"><b><font color="#FFFFFF" size="3">Search</font></b></a></p></td>
+          </font><a href="pricematch.htm"><font face="Arial" size="1" color="#FFFFFF">Price
+          Match</font></a></td>
+        <td width="25%" align="center"><p align="center"><b>
+        <a href="http://www.discountcell.com/order.asp"><font color="#FFFFFF" size="3">View
+        Cart/Checkout</font></a></b></p></td>
+        <td width="25%" align="center"><p align="center"><b>
+        <a href="http://www.discountcell.com/search.asp"><font color="#FFFFFF" size="3">Search</font></a></b></p></td>
       </tr>
     </tbody></table>
-      </div><p>&nbsp;</p>
+      </div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font color="#FFFFFF"> </font></p><font color="#FFFFFF">
     <div align="center"><table border="1" cellpadding="2" cellspacing="0" width="100%" bgcolor="#808080" bordercolor="#FFFFFF">
       <tbody><tr>
         <td width="15%"><p align="center"><a href="http://www.discountcell.com/camcorder/cchome.asp"><font color="#FFFFFF" size="3"><b>Camcorder</b></font></a></p></td>
@@ -45,11 +49,11 @@
         <td width="15%">&nbsp;</td>
       </tr>
     </tbody></table>
-      </div></td>
+      </div></font></td>
   </tr>
 </tbody></table>
 </center></div>
-</td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top">
+</td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top">
 
 <h2 align="CENTER"><font color="#000080" size="6"><strong><br>
 Privacy Policy</strong></font></h2>
