--- a/a/an/ani/animalpicturesarchive.com.html
+++ b/a/an/ani/animalpicturesarchive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the animalpicturesarchive.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205090812id_/http%3A//animalpicturesarchive.com/animal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the animalpicturesarchive.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605162352id_/http%3A//www.animalpicturesarchive.com/animal/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Animal Pictures Archive's Privacy Policy</title>
